<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbarSize="32dp"
                android:text="@string/reservation_for_restraunt"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/name" />

            <EditText
                android:id="@+id/UserPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone" />

            <EditText
                android:id="@+id/NumberOfPax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/number_of_pax"
                android:inputType="phone" />

            <CheckBox
                android:id="@+id/Smoke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Smoking Table?" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbarSize="32dp"
                android:timePickerMode="spinner" />

            <Button
                android:id="@+id/BOOK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_booking" />

            <Button
                android:id="@+id/ResetBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="RESET" />

            <TextView
                android:id="@+id/DisplayText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>